# emb-photon

./: .gitignore  README.md
src/01_flatled/: Makefile  main.c  stm32f4xx.h
src/basic/01_flatled/: flatled  stm32f4_ram.ld
src/basic/02_libtemplate/: CMakeLists.txt  led.c  led.h  main.c  stm32f4_flash.ld  stm32f4xx_conf.h  system_stm32f4xx.c
src/basic/03_cmsis_hal_template/src/: CMakeLists.txt
src/flatled/: Makefile  main.c  starter  stm32f4xx.h
src/starter/: Makefile  main.c  stm32f4xx.h
